# qtBoincMan

./: .gitignore  CMakeLists.txt  README.md  qtBoincMan.kdev4  qtSeti.cpp  qtSeti.kdev4
.kdev4/: _custom.kdev4  qtSeti.kdev4
src/: NoticeTab.cpp  NoticeTab.h  ProjectsTab.cpp  ProjectsTab.h  main.cpp  qtBoincMan.cpp  qtBoincMan.h  qtSeti.cpp  qtSeti.h
